--- a/2_pm2.5_GradientDescent.ipynb
+++ b/2_pm2.5_GradientDescent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 利用linear regression及手刻Gradient Descent 預測pm2.5\n",
+    "# Linear regression手刻Gradient Descent 預測pm2.5\n",
     "https://ntumlta.github.io/2017fall-ml-hw1/"
    ]
   },
@@ -3226,7 +3226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"predict2.csv\"\n",
+    "filename = \"predict_pm.csv\"\n",
     "with open(filename, \"w+\") as text:\n",
     "    s = csv.writer(text, delimiter=',', lineterminator='\\n')\n",
     "    s.writerow([\"id\", \"value\"])\n",
