--- a/3.1_expression_cnn.ipynb
+++ b/3.1_expression_cnn.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference\n",
+    "台灣資料科學學會- 手把手的深度學習實務 https://www.slideshare.net/tw_dsconf/ss-70083878  \n",
+    "http://cs231n.github.io/convolutional-networks/  \n",
+    "https://blog.keras.io/how-convolutional-neural-networks-see-the-world.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -24,6 +34,7 @@
     "import math\n",
     "from random import randint\n",
     "import sys\n",
+    "\n",
     "\n",
     "from keras.models import Sequential\n",
     "from keras.models import load_model\n",
